// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Prepare for GRB > renders help mode without crashing 1`] = `
<DocumentFragment>
  <div
    class="prepare-for-grb"
  >
    <div>
      <div
        class="help-page-intro margin-bottom-4"
      >
        <h1
          aria-live="polite"
          class="easi-h1 margin-bottom-0 margin-top-3"
          tabindex="-1"
        >
          Prepare for the Governance Review Board meeting
        </h1>
        <a
          class="usa-link display-inline-block margin-y-1"
          href="/help/it-governance"
        >
          <span
            class="easi-tag system-profile__tag text-primary-dark bg-primary-lighter padding-bottom-1"
            data-testid="tag"
          >
            IT Governance
          </span>
        </a>
        <div
          class="font-body-lg margin-top-1 margin-bottom-0 line-height-body-5"
        >
          Learn what you need in order to be successful, including what to expect during and after the meeting, what to prepare for, and what to bring to the meeting.
        </div>
      </div>
      <h2
        class="font-heading-xl line-height-heading-2 margin-top-3 margin-bottom-2"
      >
        What is the Governance Review Board?
      </h2>
      <p
        class="line-height-sans-5"
      >
        The role of the  IT Governance Review Board (GRB) is to ensure  IT Investments are a good use of CMS resources, meeting business needs at acceptable costs. The Governance Review Board consists of CMS Budget Development Group Chairs and representatives who make CMS project funding recommendations to the Administrator, as well as the Chief Financial Officer (CFO), Chief Information Officer (CIO), Chief Technology Officer (CTO), and Head of Contracting Activity.
      </p>
      <h3>
        What to expect at the meeting
      </h3>
      <p
        class="line-height-sans-5"
      >
        During the session, you will talk through your Business Case with the board members and how the approval of your project will help benefit CMS programs. You’ll need to talk through how you arrived at the costs in your Business Case and the assumptions you made when calculating them. Next, the GRB will review your proposed alternatives and their pros and cons.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            You’ll be discussing sensitive costing information in this meeting. So please don’t bring any contractors to this session unless you need them to help discuss the technical solution.
          </p>
        </div>
      </div>
      <div
        class="margin-top-3 padding-2 bg-base-lightest"
      >
        <h3
          class="margin-top-0 margin-bottom-1"
        >
          Tips for the meeting
        </h3>
        <ul
          class="usa-list usa-list--unstyled line-height-body-5 padding-y-0"
        >
          <li>
            When walking through your Business Case, highlight how this project would benefit CMS and further their current priorities.
          </li>
          <li>
            Thoroughly review the costs included in your Business Case and identify the assumptions you made when you calculated them.
          </li>
          <li>
            If you have been discussing your request with Subject Matter Expert (SME) groups, highlight it during the meeting. This helps the Review Board understand more about the project team’s circumstances and offers them additional reassurances.
          </li>
        </ul>
      </div>
    </div>
    <div>
      <h2
        class="margin-top-6 margin-bottom-2"
      >
        What to bring
      </h2>
      <p
        class="margin-y-0"
      >
        The following are important items to have with you at the GRB meeting:
      </p>
      <ul
        class="usa-list usa-list--unstyled line-height-body-5 margin-top-1 padding-y-0"
      >
        <li>
          a copy of your Business Case
        </li>
        <li>
          any contracting materials that you might have in place, for example, a Statement of Work (SOW), a Performance Work Statement (PWS), or other contracting document
        </li>
        <li>
          additional materials that you’d like to talk through, such as a concept diagram
        </li>
      </ul>
    </div>
    <div>
      <h2
        class="margin-top-6 margin-bottom-2"
      >
        Possible outcomes
      </h2>
      <p
        class="margin-y-0"
      >
        After this discussion, the Governance Review Board will decide whether to accept your proposed Business Case.
      </p>
      <ul
        class="usa-list usa-list--unstyled list-style-none line-height-body-5 margin-top-1 padding-y-0"
      >
        <li>
          LCID Issued: If the business proposal is acceptable to the Governance Review Board, an LCID will be issued, and future review will occur at regular intervals specific to your project.
        </li>
        <li>
          LCID Delayed: If there are two or more objections, an LCID will not be issued. The project team will receive next steps to outline which concerns or requirements must be addressed before they can apply for an LCID again 
        </li>
      </ul>
    </div>
    <div
      class="usa-summary-box desktop:grid-col-6 margin-top-5"
      data-testid="summary-box"
    >
      <div
        class="usa-summary-box__body"
      >
        <h3
          class="usa-summary-box__heading"
        >
          Need help?
        </h3>
        <div
          class="usa-summary-box__text"
        >
          <div
            class="margin-top-2 margin-bottom-05"
          >
            Contact the Governance team:
          </div>
          <div>
            <a
              class="usa-link"
              href="mailto:IT_Governance@cms.hhs.gov"
            >
              IT_Governance@cms.hhs.gov
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Prepare for GRB > renders without crashing 1`] = `
<DocumentFragment>
  <div
    class="prepare-for-grb"
  >
    <div>
      <h1
        aria-live="polite"
        class="easi-h1 line-height-heading-2"
        tabindex="-1"
      >
        Prepare for the Governance Review Board meeting
      </h1>
      <h2
        class="font-heading-xl line-height-heading-2 margin-top-3 margin-bottom-2"
      >
        What is the Governance Review Board?
      </h2>
      <p
        class="line-height-sans-5"
      >
        The role of the  IT Governance Review Board (GRB) is to ensure  IT Investments are a good use of CMS resources, meeting business needs at acceptable costs. The Governance Review Board consists of CMS Budget Development Group Chairs and representatives who make CMS project funding recommendations to the Administrator, as well as the Chief Financial Officer (CFO), Chief Information Officer (CIO), Chief Technology Officer (CTO), and Head of Contracting Activity.
      </p>
      <h3>
        What to expect at the meeting
      </h3>
      <p
        class="line-height-sans-5"
      >
        During the session, you will talk through your Business Case with the board members and how the approval of your project will help benefit CMS programs. You’ll need to talk through how you arrived at the costs in your Business Case and the assumptions you made when calculating them. Next, the GRB will review your proposed alternatives and their pros and cons.
      </p>
      <div
        class="usa-alert usa-alert--info usa-alert--slim"
        data-testid="alert"
      >
        <div
          class="usa-alert__body"
        >
          <p
            class="usa-alert__text"
          >
            You’ll be discussing sensitive costing information in this meeting. So please don’t bring any contractors to this session unless you need them to help discuss the technical solution.
          </p>
        </div>
      </div>
      <div
        class="margin-top-3 padding-2 bg-base-lightest"
      >
        <h3
          class="margin-top-0 margin-bottom-1"
        >
          Tips for the meeting
        </h3>
        <ul
          class="usa-list usa-list--unstyled line-height-body-5 padding-y-0"
        >
          <li>
            When walking through your Business Case, highlight how this project would benefit CMS and further their current priorities.
          </li>
          <li>
            Thoroughly review the costs included in your Business Case and identify the assumptions you made when you calculated them.
          </li>
          <li>
            If you have been discussing your request with Subject Matter Expert (SME) groups, highlight it during the meeting. This helps the Review Board understand more about the project team’s circumstances and offers them additional reassurances.
          </li>
        </ul>
      </div>
    </div>
    <div>
      <h2
        class="margin-top-6 margin-bottom-2"
      >
        What to bring
      </h2>
      <p
        class="margin-y-0"
      >
        The following are important items to have with you at the GRB meeting:
      </p>
      <ul
        class="usa-list usa-list--unstyled line-height-body-5 margin-top-1 padding-y-0"
      >
        <li>
          a copy of your Business Case
        </li>
        <li>
          any contracting materials that you might have in place, for example, a Statement of Work (SOW), a Performance Work Statement (PWS), or other contracting document
        </li>
        <li>
          additional materials that you’d like to talk through, such as a concept diagram
        </li>
      </ul>
    </div>
    <div>
      <h2
        class="margin-top-6 margin-bottom-2"
      >
        Possible outcomes
      </h2>
      <p
        class="margin-y-0"
      >
        After this discussion, the Governance Review Board will decide whether to accept your proposed Business Case.
      </p>
      <ul
        class="usa-list usa-list--unstyled list-style-none line-height-body-5 margin-top-1 padding-y-0"
      >
        <li>
          LCID Issued: If the business proposal is acceptable to the Governance Review Board, an LCID will be issued, and future review will occur at regular intervals specific to your project.
        </li>
        <li>
          LCID Delayed: If there are two or more objections, an LCID will not be issued. The project team will receive next steps to outline which concerns or requirements must be addressed before they can apply for an LCID again 
        </li>
      </ul>
    </div>
    <div
      class="usa-summary-box desktop:grid-col-6 margin-top-5"
      data-testid="summary-box"
    >
      <div
        class="usa-summary-box__body"
      >
        <h3
          class="usa-summary-box__heading"
        >
          Need help?
        </h3>
        <div
          class="usa-summary-box__text"
        >
          <div
            class="margin-top-2 margin-bottom-05"
          >
            Contact the Governance team:
          </div>
          <div>
            <a
              class="usa-link"
              href="mailto:IT_Governance@cms.hhs.gov"
            >
              IT_Governance@cms.hhs.gov
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
